# book-recommender

./: .gitignore  main.py  pyproject.toml
core/: config.py  db.py  error.py  errors.py  tokens.py
crud/: __init__.py  auth_user.py  base.py  book.py  review.py
endpoints/: __init__.py  auth.py  book.py  review.py
models/: auth_user.py  base.py  book.py  review.py
schemas/: __init__.py  auth_user.py  book.py  custom_types.py  review.py
scripts/: seed_books.py
